[FIX] ai,mail: prevent chat bubbles from being hidden behind form status bar
Before this commit:
 - Chat notification bubbles appear behind the form status bar

After this commit:
 - Chat notification bubbles are properly displayed above the form status bar

--- a/addons/mail/static/src/core/common/chat_window.scss
+++ b/addons/mail/static/src/core/common/chat_window.scss
@@ -1,7 +1,7 @@
 .o-mail-ChatWindow {
     width: $o-mail-ChatWindow-width;
 
-    z-index: $zindex-sticky;
+    z-index: $zindex-sticky + 1;
     &:not(.o-mobile) {
         --border-opacity: .15;
         height: Min(95vh, $o-mail-ChatWindow-width * 15 / 9)
